@@ -45,7 +45,6 @@ import java.util.function.Supplier;
 
 import static com.hedera.services.context.properties.StaticPropertiesHolder.STATIC_PROPERTIES;
 import static com.hedera.services.state.submerkle.RichInstant.fromJava;
-import static java.util.stream.Collectors.toList;
 
 public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private static final Logger log = LogManager.getLogger(MerkleNetworkContext.class);
@@ -72,7 +71,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	static final Instant[] NO_CONGESTION_STARTS = new Instant[0];
 	static final DeterministicThrottle.UsageSnapshot[] NO_SNAPSHOTS = new DeterministicThrottle.UsageSnapshot[0];
 
-	public static final Instant UNKNOWN_CONSENSUS_TIME = null;
+	public static final Instant NULL_CONSENSUS_TIME = null;
 
 	static DomainSerdes serdes = new DomainSerdes();
 	static Supplier<ExchangeRates> ratesSupplier = ExchangeRates::new;
@@ -82,7 +81,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private Instant[] congestionLevelStarts = NO_CONGESTION_STARTS;
 	private ExchangeRates midnightRates;
 	private Instant lastMidnightBoundaryCheck = null;
-	private Instant consensusTimeOfLastHandledTxn = UNKNOWN_CONSENSUS_TIME;
+	private Instant consensusTimeOfLastHandledTxn = NULL_CONSENSUS_TIME;
 	private SequenceNumber seqNo;
 	private long lastScannedEntity;
 	private long entitiesScannedThisSecond = 0L;
@@ -138,10 +137,8 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 		var activeThrottles = throttling.allActiveThrottles();
 
 		if (activeThrottles.size() != usageSnapshots.length) {
-			log.warn("There are " +
-					activeThrottles.size() + " active throttles, but " +
-					usageSnapshots.length + " usage snapshots from saved state. " +
-					"Not performing a reset!");
+			log.warn("There are {} active throttles, but {} usage snapshots from saved state. " +
+					"Not performing a reset!", activeThrottles.size(), usageSnapshots.length);
 			return;
 		}
 
@@ -481,7 +478,7 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 	private void reset(List<DeterministicThrottle> throttles, GasLimitDeterministicThrottle gasLimitThrottle) {
 		var currUsageSnapshots = throttles.stream()
 				.map(DeterministicThrottle::usageSnapshot)
-				.collect(toList());
+				.toList();
 		for (int i = 0, n = usageSnapshots.length; i < n; i++) {
 			var savedUsageSnapshot = usageSnapshots[i];
 			var throttle = throttles.get(i);
@@ -489,9 +486,11 @@ public class MerkleNetworkContext extends AbstractMerkleLeaf {
 				throttle.resetUsageTo(savedUsageSnapshot);
 				log.info("Reset {} with saved usage snapshot", throttle);
 			} catch (Exception e) {
-				log.warn("Saved usage snapshot #" + (i + 1)
-						+ " was not compatible with the corresponding active throttle ("
-						+ e.getMessage() + "); not performing a reset!");
+				log.warn(
+						"Saved usage snapshot # {} was not compatible with the corresponding active throttle ( {}) not" +
+								" " +
+								"performing a reset !",
+						(i + 1), e.getMessage());
 				resetUnconditionally(throttles, currUsageSnapshots);
 				break;
 			}
